modified models, public, seeders, and server files

--- a/public/stats.html
+++ b/public/stats.html
@@ -11,10 +11,10 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <title>Fitness Chart</title>
+    <title>The Amazing Tracker Chart</title>
   </head>
   <nav class="ui tabular menu">
-    <a class="active item" href="/">Fitness Tracker</a>
+    <a class="active item" href="/">The Amazing Tracker</a>
   </nav>
   <body>
     <div class="container mt">
