--- a/public/exercise.html
+++ b/public/exercise.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Fitness Tracker</title>
+    <title>The Amazing Tracker</title>
   </head>
 
   <body>
@@ -19,7 +19,7 @@
     </nav>
     <div class="wrapper">
       <header>
-        <h1>Fitness Tracker</h1>
+        <h1>The Amazing Tracker</h1>
       </header>
       <div class="ui container exercise">
         <div class="ui raised card m-auto">
