--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
   <link rel="stylesheet" href="style.css" />
-  <title>Fitness Tracker</title>
+  <title>The Amazing Tracker</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
   </nav>
   <div class="wrapper workout">
     <header>
-      <h1>Fitness Tracker</h1>
+      <h1>The Amazing Tracker</h1>
     </header>
     <div class="ui container workout">
       <div class="ui raised card m-auto">
